tests/compile_fail/key_expr_span.rs
use michie::memoized;

#[memoized(key_type = bool, key_expr = &b)]
fn f(a: bool) -> bool {
    a
}

fn main() {}
