tests/compile_fail/key_expr_span.stderr
error[E0425]: cannot find value `b` in this scope
 --> tests/compile_fail/key_expr_span.rs:3:41
  |
3 | #[memoized(key_type = bool, key_expr = &b)]
  |                                         ^ help: a local variable with a similar name exists: `a`
